pridan PrikazPoloz, opravenych nekolik chyb, predelani HashSetu s vychodama na ArryList kvuli spravnemu razeni, PrikazOdemkni ma opravenou klicovou funkcionalitu, optimalizovana prace se stringama, doplnen epilog, v Batohu pridana funkce vracejici kopii obsahu